--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
-@import './global.css';
+/* @import './global.css'; */
+/* @import './index.css'; */
 
 p {
     color: red;
+    display: flex;
 }
+
+
+
+/* importLoaders 属性用于制定当前语句需要几个前置loader进行处理 */
