--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,10 @@
+/* @import './index.less'; */
+
 body {
-    background-color: aquamarine;
+    background-color: skyblue;
+    display: flex;
+}
+
+p {
+    font-size: 20px;
 }
